Fixed scaling for non mobile videos

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -18,9 +18,11 @@
   }
 }
 
-:global(.Main > .VideoEmbed),
-:global(.Main > .ImageEmbed) {
-  transform: scale(0.85);
+@media screen and (max-device-width: 500px) {
+  :global(.Main > .VideoEmbed),
+  :global(.Main > .ImageEmbed) {
+    transform: scale(0.85);
+  }
 }
 
 .base {
