--- a/src/components/Result/styles.scss
+++ b/src/components/Result/styles.scss
@@ -2,7 +2,7 @@
   background: rgba(0, 0, 0, 0.75);
   color: #f9f9f9;
   font-family: ABCSans, Arial, Helvetica, sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.66666667;
   padding: 20px;
   text-transform: uppercase;
